tests/cases_invalid/generics/fn_items/.expected
error: could not find `Undefined` type
 --> ./cases_invalid/generics/fn_items/main.shd:5:36
  |
5 | fn undefined_generic_const_type<N: Undefined>() {
  |                                    ^^^^^^^^^ undefined type
  |

error: unsupported type `Data` in `const` context, expected `u32`, `i32`, `f32` or `bool`
 --> ./cases_invalid/generics/fn_items/main.shd:8:34
  |
8 | fn invalid_generic_const_type<N: Data>() {
  |                                  ^^^^ unsupported type
  |

error: function `duplicated_function<...>(_)` is defined multiple times
  --> ./cases_invalid/generics/fn_items/main.shd:14:4
   |
11 | fn duplicated_function<T, U>(param: i32) {
   |    ------------------- info: function with same signature is defined here
12 | }
13 |
14 | fn duplicated_function<T, U, V>(param: u32) {
   |    ^^^^^^^^^^^^^^^^^^^ duplicated function
   |

error: generic parameter with name `T` is defined multiple times
  --> ./cases_invalid/generics/fn_items/main.shd:17:30
   |
17 | fn duplicated_generic_params<T, U, T: u32, U: u32>() {
   |                              ^     - info: generic parameter with same name is defined here
   |                              |
   |                              duplicated generic parameter name
   |

error: generic parameter with name `U` is defined multiple times
  --> ./cases_invalid/generics/fn_items/main.shd:17:33
   |
17 | fn duplicated_generic_params<T, U, T: u32, U: u32>() {
   |                                 ^          - info: generic parameter with same name is defined here
   |                                 |
   |                                 duplicated generic parameter name
   |
